2004-06-19  Bryan Chan <b8chan@uwaterloo.ca>
	* src/shaders/WorleyShader.cpp:
	Minor improvements to the worley shaders for the video and
  final poster submission.

  * src/shaders/AlgebraShader.cpp:
  Updated for worley interfaces that match the book.

	* src/shaders/LCD.cpp:
	Added restriction on number of fractional digits.

	* src/ShrikeCanvas.cpp:
	Added FPS counter using LCD shader.

  * src/Timer.?pp:
  Copied these over from shdemo for timing functions.
	
2004-06-16  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeFrame.cpp (showProgram): You guessed it... More fixes
	for the new ShProgram class.

	* src/ShrikeFrame.hpp: Fixes for the new ShProgram class.

	* src/UniformPanel.cpp (setShader): Fixes for new ShProgram class.

2004-06-11  Bryan Chan <b8chan@uwaterloo.ca>
  * src/ShrikeCanvas.?pp (renderObject):
  Use display lists. (Fix issue120) 

2004-06-10  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/AlgebraShader.cpp (init_all): Use the NDC position
	to halftone, instead of texture coordinates.

	* src/shaders/LCD.cpp: This should be a great debugging tool :).

2004-06-01  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/NonPeriodic.cpp: Use the new boolean functions.

	* src/shaders/AlgebraShader.cpp: Give the textures names.

2004-05-27  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/UniformPanel.cpp (setShader): Use has_name() instead of hasName().

2004-05-21  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/*: Remove redundant bind() implementations, and
	replace shBindShader with shBind (see r937, issue1).

2004-05-20  Bryan Chan <b8chan@uwaterloo.ca>

	* src/shaders/WorleyShader.cpp: Added a bucket load of Worley shaders. 
  
2004-04-14  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/AlgebraShader.cpp (AlgebraShaders): Don't include "nulls" in
	names.
	Rename AlgebraShader to AlgebraShaders and don't make it an
	ShShader. Cut away some unnecessary code while we're at it.
